# Code-Optimization

LU_optimization/: CMakeLists.txt  lu1.c  lu10.c  lu2.c  lu3.c  lu4.c  lu5.c  lu6.c  lu7.c  lu8.c  lu9.c  results.txt
lab1/: CMakeLists.txt  mm1.c  mm2.c  mm3.c  mm4.c  mm5.c  mm6.c  mm7.c  mm8.c  mm9.c
lab2/: CMakeLists.txt  README.md  chol1.c  chol2.c  chol3.c  chol4.c  chol5.c  chol6.c  chol7.c  notes.txt
lab3/: CMakeLists.txt  ge1.c  ge2.c  ge3.c  ge4.c  ge5.c  ge6.c  ge7.c
lab4/: CMakeLists.txt  str1.cpp  str10.cpp  str11.cpp  str12.cpp  str2.cpp  str3.cpp  str4.cpp  str5.cpp  str6.cpp  str7.cpp  str8.cpp  str9.cpp
simple_optimization/: CMakeLists.txt  makefile
