cmake_minimum_required(VERSION 3.19)
project(lab1 C)

set(CMAKE_C_STANDARD 11)

SET(CMAKE_CXX_FLAGS_DISTRIBUTION "-O2")
SET(CMAKE_C_FLAGS_DISTRIBUTION "-O2")

add_executable(lab1_1 mm1.c)
add_executable(lab1_2 mm2.c)
add_executable(lab1_3 mm3.c)
add_executable(lab1_4 mm4.c)
add_executable(lab1_5 mm5.c)
add_executable(lab1_6 mm6.c)
add_executable(lab1_7 mm7.c)
add_executable(lab1_8 mm8.c)
add_executable(lab1_9 mm9.c)